# aaarc

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Docker_Compose.yaml  Dockerfile  README.md  Rocket.toml  allowed_emails.txt  compose.yaml  req
.cargo/: config.toml
.github/workflows/: main.yml
src/: main.rs
static/: ads.txt  auth.html  contact.html  events.html  index.html  privacy_policy.html  repeaters.html  resources.html  robots.txt  sitemap.xml  template.html
static/.well-known/: pgp-key.txt  security.txt
static/content/: test.json  test.txt
static/css/: auth.css  events.css  repeaters.css  styles.css
static/js/: auth.js  dropdown.js  main.js  navbar.js  resources.js
