[package]
name = "ashland-area-amateur-radio-club"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
reqwest = {version = "0.11.24", features = ["json"]}
rocket = "0.5.0"
rocket_oauth2 = "0.5.0"
serde = "1.0.196"
serde_json = "1.0.114"

#[build]
#rustflags = ["-C", "target-cpu=native"]

[profile.internal]
inherits = "dev"
codegen-units = 1
lto = "thin"
opt-level = "s"
debug = 1
incremental = true

[profile.release]
codegen-units = 1
#lto = "fat"
opt-level = "z"
strip = "symbols"
