[package]
name = "ashland-area-amateur-radio-club"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
reqwest = {version = "0.11.24", features = ["json"]}
rocket = "0.5.0"
rocket_oauth2 = "0.5.0"
serde = "1.0.196"
serde_json = "1.0.114"

[profile.internal]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
debug = 0
incremental = true
strip = true
panic = "abort"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = "debuginfo"
lto = true
panic = "abort"
debug = false

[profile.dev]
debug = 0
